# website

./: README.md  dune  dune-project  tailwind.config.js  website.opam
scripts/: dev.sh
src/: dune  handler.ml  import.ml  router.ml  website.ml
src/components/: about.eml.ml  container.eml.ml  hero.eml.ml  nav.eml.ml  project.eml.ml  seo.eml.ml  title.eml.ml
src/layouts/: layout.eml.ml
src/pages/: blog.eml.ml  index.eml.ml  not_found.eml.ml  projects.eml.ml
